Renamed groupId from 'red.zyc' to 'io.allurx' and updated package structure accordingly.

--- a/pom.xml
+++ b/pom.xml
@@ -2,29 +2,33 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>red.zyc.boot</groupId>
-    <artifactId>desensitization-spring-boot</artifactId>
+    <groupId>io.allurx</groupId>
+    <artifactId>blur-spring-boot</artifactId>
     <version>2.0.0</version>
     <packaging>pom</packaging>
 
-    <name>desensitization-spring-boot</name>
-    <url>https://github.com/allurx/desensitization-spring-boot</url>
-    <description>desensitization-spring-boot</description>
+    <name>blur-spring-boot</name>
+    <url>https://github.com/allurx/blur-spring-boot</url>
+    <description>blur-spring-boot</description>
 
     <modules>
-        <module>desensitization-spring-boot-autoconfigure</module>
-        <module>desensitization-spring-boot-starter</module>
-        <module>desensitization-spring-boot-samples</module>
+        <module>blur-spring-boot-autoconfigure</module>
+        <module>blur-spring-boot-starter</module>
+        <module>blur-spring-boot-samples</module>
     </modules>
 
     <properties>
-        <desensitization.version>3.0.0</desensitization.version>
-        <maven-compiler-plugin.version>3.11.0</maven-compiler-plugin.version>
-        <maven-source-plugin.version>3.3.0</maven-source-plugin.version>
-        <maven-javadoc-plugin.version>3.5.0</maven-javadoc-plugin.version>
-        <maven-gpg-plugin.version>3.0.1</maven-gpg-plugin.version>
+        <blur.version>4.0.0</blur.version>
+        <maven.compiler.source.version>21</maven.compiler.source.version>
+        <maven.compiler.target.version>21</maven.compiler.target.version>
+        <maven-compiler-plugin.version>3.13.0</maven-compiler-plugin.version>
+        <maven-source-plugin.version>3.3.1</maven-source-plugin.version>
+        <maven-resources-plugin.version>3.3.1</maven-resources-plugin.version>
+        <maven-javadoc-plugin.version>3.10.0</maven-javadoc-plugin.version>
+        <maven-gpg-plugin.version>3.2.5</maven-gpg-plugin.version>
+        <maven-central-publishing-plugin.version>0.6.0</maven-central-publishing-plugin.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <spring-boot.version>3.1.5</spring-boot.version>
+        <spring-boot.version>3.3.5</spring-boot.version>
     </properties>
 
     <licenses>
@@ -36,40 +40,40 @@
     </licenses>
 
     <scm>
-        <url>https://github.com/allurx/desensitization-spring-boot</url>
-        <connection>scm:git:https://github.com/allurx/desensitization-spring-boot.git</connection>
-        <developerConnection>scm:git:https://github.com/allurx/desensitization-spring-boot.git</developerConnection>
+        <url>https://github.com/allurx/blur-spring-boot</url>
+        <connection>scm:git:https://github.com/allurx/blur-spring-boot.git</connection>
+        <developerConnection>scm:git:https://github.com/allurx/blur-spring-boot.git</developerConnection>
     </scm>
 
     <issueManagement>
         <system>GitHub Issues</system>
-        <url>https://github.com/allurx/desensitization-spring-boot/issues</url>
+        <url>https://github.com/allurx/blur-spring-boot/issues</url>
     </issueManagement>
 
     <developers>
         <developer>
-            <name>zyc</name>
+            <name>allurx</name>
             <email>allurx.zyc@gmail.com</email>
-            <url>https://www.zyc.red</url>
+            <url>https://www.allurx.io</url>
         </developer>
     </developers>
 
     <dependencyManagement>
         <dependencies>
             <dependency>
-                <groupId>red.zyc.boot</groupId>
-                <artifactId>desensitization-spring-boot-autoconfigure</artifactId>
+                <groupId>io.allurx</groupId>
+                <artifactId>blur</artifactId>
+                <version>${blur.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.allurx</groupId>
+                <artifactId>blur-spring-boot-autoconfigure</artifactId>
                 <version>${project.version}</version>
             </dependency>
             <dependency>
-                <groupId>red.zyc.boot</groupId>
-                <artifactId>desensitization-spring-boot-starter</artifactId>
+                <groupId>io.allurx</groupId>
+                <artifactId>blur-spring-boot-starter</artifactId>
                 <version>${project.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>red.zyc</groupId>
-                <artifactId>desensitization</artifactId>
-                <version>${desensitization.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.springframework.boot</groupId>
@@ -101,9 +105,15 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>${maven-compiler-plugin.version}</version>
                 <configuration>
-                    <source>21</source>
-                    <target>21</target>
+                    <source>${maven.compiler.source.version}</source>
+                    <target>${maven.compiler.target.version}</target>
+                    <parameters>true</parameters>
                 </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-resources-plugin</artifactId>
+                <version>${maven-resources-plugin.version}</version>
             </plugin>
         </plugins>
     </build>
@@ -163,6 +173,15 @@
                                 </goals>
                             </execution>
                         </executions>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.sonatype.central</groupId>
+                        <artifactId>central-publishing-maven-plugin</artifactId>
+                        <version>${maven-central-publishing-plugin.version}</version>
+                        <extensions>true</extensions>
+                        <configuration>
+                            <publishingServerId>central</publishingServerId>
+                        </configuration>
                     </plugin>
                 </plugins>
             </build>
